<resources>
    <string name="app_name">Barbershop Management App</string>
    <string name="price_text">Price:</string>
    <string name="hairstyle_pic">hairstyle_pic</string>
    <string name="book_appointment_title">Book Appointment</string>
    <string name="paymentTitle">Payment</string>
    <string name="price">Price: $%1$d</string>
    <string name="hairstyleActivityTitle">Choose a Hairstyle</string>
    <string name="chooseButton">Choose</string>
    <string name="barber_name">Barber Name</string>
    <string name="barber_rate">Barber Rate</string>
    <string name="textview">TextView</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_ownerdashboard">Ownerdashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_now">Login</string>
    <string name="click_to_register">Create an account</string>
    <string name="logout">Logout</string>
    <string name="review">Review</string>
    <string name="cust">Customer Name</string>
    <string name="barb">Barber Name</string>
    <string name="reg_text">Don\'t have an account?</string>
    <string name="login_text">Already have an account?</string>
    <string name="name">Name</string>
    <string name="leave_review">Leave a Review</string>
    <string name="barber_profile_picture">Barber Profile Picture</string>
    <string name="rating">Rating</string>
    <string name="leave_a_review">Add Review</string>
    <string name="test_review">Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.Review.ReviewReview.Review.Review.Review.Review.Review.</string>
    <string name="delete_prompt">Delete</string>
    <string name="delete_button_content_description">Delete appointment</string>
    <string name="logo_description">Logo</string>
</resources>