<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="25sp"
    android:paddingVertical="0dp"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="172dp"
        android:layout_height="182dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_two" />

    <TextView
        android:text="UBarber"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/button_color"
        android:layout_marginBottom="20sp"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint=" "
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/email"
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint=" "
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_marginTop="10sp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/reg_text"
        android:text="@string/reg_text"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>