<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15sp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15sp"
        app:cardBackgroundColor="#E4E4E4"
        app:cardElevation="4sp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20sp">
    <TextView
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/ReviewTitle"
        android:textColor="@color/black"
        android:text="@string/review" />

    <TextView
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/DisplayRating"
        android:layout_toEndOf="@+id/ReviewTitle"
        android:textColor="@color/black"
        android:text="@string/rating"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DisplayRating"
        android:id="@+id/DisplayReview"
        android:textColor="@color/black"
        android:layout_marginTop="20sp"
        android:text="@string/test_review" />
</RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>