<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="15sp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150sp"
        app:cardBackgroundColor="#E4E4E4"
        app:cardElevation="4sp"
        app:cardCornerRadius="15sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginTop="15sp">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:id="@+id/barberImg"
                android:src="@drawable/barber_icon"
                android:contentDescription="@string/barber_profile_picture"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/barberImg"
                android:paddingTop="20sp"
                android:layout_marginStart="15sp"
                android:text="@string/name"
                android:id="@+id/barber_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/barberImg"
                android:paddingTop="20sp"
                android:layout_marginStart="15sp"
                android:layout_below="@+id/barber_name"
                android:text="@string/rating"
                android:id="@+id/barber_rating" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>