<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:gravity="center_horizontal"
    tools:context=".Reviews">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background"
        android:elevation="4sp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="15sp"
        android:layout_marginBottom="15sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#BBBB"
            android:layout_height="wrap_content"
            android:padding="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/courgette"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginStart="15sp"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:id="@+id/barber_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:fontFamily="@font/courgette"
                android:layout_below="@+id/barber_name"
                android:textColor="#817E73"
                android:text="@string/rating"
                android:textSize="20sp"
                android:id="@+id/barber_rating" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/reviews_list_view"
        android:layout_width="match_parent"
        android:layout_height="513dp"
        android:layout_marginHorizontal="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:id="@+id/add"
        android:text="@string/leave_a_review"
        android:layout_marginTop="15sp" />
</LinearLayout>